2004-10-21 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Removed all FILE* ref and replace by ifstream/ofstream. For now I use a temp 
    solution with the two files jdatadst.cxx and jdatasrc.cxx, this need to be 
    discussed (plus I didn't like having a 2000 lines patch not commited)

2004-10-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDocument.cxx: wrong type on return fixed (thanks dashboard)
  * CLEANUP_ROUND (14) for gdcmPixelConvert
    - PixelConvert::GetLutRGBA(FILE*) is now GetLutRGBA() (no fp needed)
    - PixelConvert::BuildRGBImage()(FILE*) is now BuildRGBImage() (no fp needed)
    - File::GetImageDataIntoVector() doesn't need unnecessary OpenFile() and
      CloseFile() anymore.
    - File::GetImageDataRaw() doesn't call GetImageDataIntoVectorRaw()
      anymore and hence avoids storing a copy of PixelConvert::Decompressed
      into File::Pixel_Data.

2004-10-20 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDocument.cxx ftell() return properly stored in a long (i.e.
    no longer depends on's programmers PMS = Preposterous Mood Swings ;).
  * CLEANUP_ROUND (13) for gdcmPixelConvert
    Substituted File::ParsePixelData() with PixelConvert::Print() new
    method:
    - src/gdcmParsePixels.cxx removed (only contained File::ParsePixelData())
    - src/gdcmRLEFrame.cxx, gdcmJPEGFragment.cxx added. Added a ::Print()
      method to those classes.
    - src/gdcmFile.[cxx|h]:
      -- Added a ::Print() method.
      -- PixelConverter is now a reference instead of a member.
      -- gdcmPython/gdcm.i: added "using namespace gdcm" in order for
         gdcm_wrap.cxx to "understand" File::GetPixelConverter()

2004-10-18 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Doc/CMakeLists.txt, doxygen.config.in: when dot is present the
    collaboration diagram and inheritance diagram should be generated with
    doxygen.
  * Doc/Website/Sidebar.html: Dashboard is now also in the sidebar.